--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -87,26 +87,31 @@
 					</ul>
 				</div>
 
-
+				<!-- Contact Form -->
 				<div class="col-md-6 contact-right mt-md-0 mt-5 ps-lg-0">
 					<form method="post" class="signin-form" th:action="@{/sendMsg}" th:object="${contact}">
+
 						<div class="input-grids">
 							<input type="text" name="w3lName" id="w3lName" placeholder="Your Name*"
 								   class="contact-input" required=""/>
 							<input type="email" name="w3lSender" id="w3lSender" placeholder="Your Email*"
 								   class="contact-input" required=""/>
-							<input type="text" name="w3lSubect" id="w3lSubect" placeholder="Subject*"
+							<input type="text" name="w3lWebsite" id="w3lWebsite" placeholder="Phone Number*"
 								   class="contact-input" required=""/>
-							<input type="text" name="w3lWebsite" id="w3lWebsite" placeholder="Website URL*"
+							<input type="text" name="w3lSubect" id="w3lSubect" placeholder="Subject*"
 								   class="contact-input" required=""/>
 						</div>
 						<div class="form-input">
 								<textarea name="w3lMessage" id="w3lMessage" placeholder="Type your message here*"
 										  required=""></textarea>
 						</div>
+
 						<button class="btn btn-style">Send Message</button>
+
 					</form>
 				</div>
+				<!-- //Contact Form	-->
+
 
 			</div>
 		</div>
