--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -93,17 +93,21 @@
 
 						<div class="input-grids">
 							<input type="text" name="w3lName" id="w3lName" placeholder="Your Name*"
-								   class="contact-input" required=""/>
+								   class="contact-input" required="" th:field="*{name}"/>
+
 							<input type="email" name="w3lSender" id="w3lSender" placeholder="Your Email*"
-								   class="contact-input" required=""/>
+								   class="contact-input" required="" th:field="*{email}"/>
+
 							<input type="text" name="w3lWebsite" id="w3lWebsite" placeholder="Phone Number*"
-								   class="contact-input" required=""/>
+								   class="contact-input" required="" th:field="*{mobileNum}"/>
+
 							<input type="text" name="w3lSubect" id="w3lSubect" placeholder="Subject*"
-								   class="contact-input" required=""/>
+								   class="contact-input" required="" th:field="*{subject}"/>
+
 						</div>
 						<div class="form-input">
 								<textarea name="w3lMessage" id="w3lMessage" placeholder="Type your message here*"
-										  required=""></textarea>
+										  required="" th:field="*{message}"></textarea>
 						</div>
 
 						<button class="btn btn-style">Send Message</button>
