--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -10,21 +10,24 @@
 <header id="site-header" class="fixed-top">
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light">
+
             <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false"
                     aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon fa icon-expand fa-bars"></span>
                 <span class="navbar-toggler-icon fa icon-close fa-times"></span>
             </button>
+
             <div class="collapse navbar-collapse" id="navbarScroll">
                 <ul class="navbar-nav mx-auto my-2 my-lg-0 navbar-nav-scroll">
+
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" th:href="@{/home}">Home</a>
                     </li>
+
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
-                           data-bs-toggle="dropdown" aria-expanded="false">
-                            Products <i class="fas fa-angle-down"></i>
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Products
+                            <i class="fas fa-angle-down"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-2" aria-labelledby="navbarScrollingDropdown">
                             <div class="row">
@@ -55,13 +58,14 @@
                             </div>
                         </ul>
                     </li>
+
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About Us</a>
                     </li>
+
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
-                           data-bs-toggle="dropdown" aria-expanded="false">
-                            Pages <i class="fas fa-angle-down"></i>
+                            data-bs-toggle="dropdown" aria-expanded="false">Pages<i class="fas fa-angle-down"></i>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
                             <li><a class="dropdown-item" href="blog.html">Blog Posts</a></li>
@@ -71,8 +75,9 @@
                             <li><a class="dropdown-item" href="shortcodes.html">Shortcodes</a></li>
                         </ul>
                     </li>
+
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
+                        <a class="nav-link" th:href="@{/contact}">Contact Us</a>
                     </li>
                 </ul>
             </div>
