--- a/src/main/resources/templates/headerdiv.html
+++ b/src/main/resources/templates/headerdiv.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -16,7 +17,7 @@
       </div>
       <!-- logo -->
       <div class="w3l_logo text-center ml-auto">
-        <h1><a href="index.html">Grocery Mart<span>Online Grocery Shopping</span></a></h1>
+        <h1><a th:href="@{/home}">Grocery Mart<span>Online Grocery Shopping</span></a></h1>
       </div>
       <!-- search -->
       <div class="header-search position-absolute">
@@ -27,8 +28,7 @@
           <div id="search" class="pop-overlay">
             <div class="popup">
               <form action="error.html" method="GET" class="search-box">
-                <input type="search" placeholder="Enter Keyword..." name="search"
-                       required="required" autofocus="">
+                <input type="search" placeholder="Enter Keyword..." name="search" required="required" autofocus="">
                 <button type="submit" class="btn"><span class="fas fa-search"
                                                         aria-hidden="true"></span></button>
               </form>
