--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -79,6 +79,10 @@
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{/contact}">Contact Us</a>
                     </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" th:href="@{/loginn}">Login Now!</a>
+                    </li>
                 </ul>
             </div>
             <!-- toggle switch for light and dark theme -->
