--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <script src="http://localhost:35729/livereload.js"></script>
@@ -64,31 +56,25 @@
 
             <form method="post" th:object="${registration}" action="/createUser" th:if="${success} != true">
               <!-- 2 column grid layout with text inputs for the first and last names -->
-              <div class="row">
-                <div class="col-md-6 mb-4">
-                  <div class="form-outline">
-                    <input type="text" id="form3Example1" class="form-control" />
-                    <label class="form-label" for="form3Example1">First name</label>
-                  </div>
-                </div>
-                <div class="col-md-6 mb-4">
-                  <div class="form-outline">
-                    <input type="text" id="form3Example2" class="form-control" />
-                    <label class="form-label" for="form3Example2">Last name</label>
-                  </div>
-                </div>
+              <div class="form-outline">
+                <input type="text" th:field="*{name}" class="form-control" placeholder="Full name"/>
               </div>
+
+              <br>
 
               <!-- Email input -->
               <div class="form-outline mb-4">
-                <input type="email" id="form3Example3" class="form-control" />
-                <label class="form-label" for="form3Example3">Email address</label>
+                <input type="email" th:field="*{email}" class="form-control" placeholder="Email address"/>
+              </div>
+
+              <!-- Phone input -->
+              <div class="form-outline mb-4">
+                <input type="tel" th:field="*{phone}" class="form-control" placeholder="Phone number"/>
               </div>
 
               <!-- Password input -->
               <div class="form-outline mb-4">
-                <input type="password" id="form3Example4" class="form-control" />
-                <label class="form-label" for="form3Example4">Password</label>
+                <input type="password" th:field="*{password}" class="form-control" placeholder="Password"/>
               </div>
 
               <!-- Checkbox -->
@@ -250,9 +236,5 @@
 <script src="js/bootstrap.min.js"></script>
 <!-- //bootstrap -->
 <!-- //Js scripts -->
-</body>
-
-</html>
-
 </body>
 </html>
