--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -60,28 +60,15 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/about}">About Us</a>
-                    </li>
-
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">Pages<i class="fas fa-angle-down"></i>
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                            <li><a class="dropdown-item" href="blog.html">Blog Posts</a></li>
-                            <li><a class="dropdown-item" href="blog-single.html">Blog Single</a></li>
-                            <li><a class="dropdown-item" href="single.html">Single</a></li>
-                            <li><a class="dropdown-item" href="faq.html">Faq's</a></li>
-                            <li><a class="dropdown-item" href="shortcodes.html">Shortcodes</a></li>
-                        </ul>
-                    </li>
-
-                    <li class="nav-item">
                         <a class="nav-link" th:href="@{/contact}">Contact Us</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" th:href="@{/loginn}">Login Now!</a>
+                        <a class="nav-link active" aria-current="page" th:href="@{/loginn}">LOGIN</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" th:href="@{/registration}">Register NOW!</a>
                     </li>
                 </ul>
             </div>
