--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -46,7 +46,7 @@
             backdrop-filter: blur(30px);
             ">
           <div class="card-body p-5 shadow-5 text-center">
-            <h2 class="fw-bold mb-5">Sign up now</h2>
+            <h2 class="fw-bold mb-5">REGISTER NOW!</h2>
 
             <ul>
               <li class="alert alert-danger" role="alert" th:each="error : ${#fields.errors('registration.*')}" th:text="${error}"></li>
