added mapping config & edit in memory user details

--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -25,7 +25,7 @@
                         <h3>Information</h3>
                         <ul class="info">
                             <li>
-                                <a href="#"><i class="fas fa-angle-right"></i>About Us</a>
+                                <a th:href="@{/about}"><i class="fas fa-angle-right"></i>About Us</a>
                             </li>
 
                             <li>
