--- a/src/main/resources/templates/headerdiv.html
+++ b/src/main/resources/templates/headerdiv.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
 <head>
     <meta charset="UTF-8">
@@ -8,10 +9,26 @@
 <body>
 
 <!-- top header White header -->
-<div class="header" id="home1">
+<div class="header">
   <div class="container">
 
     <div class="d-flex align-items-center justify-content-between">
+
+      <!-- login -->
+      <div class="w3l_login navbar ">
+
+        <div class="dropdown nav-item">
+
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+            <i class="fas fa-user"></i>
+          </button>
+          <ul class="dropdown-menu dropdz" aria-labelledby="dropdownMenuButton1">
+            <li><a class="dropdown-item" th:href="@{/login}" sec:authorize="!isAuthenticated()">Login / Sign Up</a></li>
+            <li><a class="dropdown-item" th:href="@{/logout}" sec:authorize="isAuthenticated()">Logout</a></li>
+          </ul>
+
+        </div>
+      </div>
 
       <!-- logo -->
       <div class="w3l_logo text-center">
