--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -6,7 +6,7 @@
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Grocery Mart - Ecommerce Category Bootstrap Responsive Website Template - Contact Us </title>
+	<title>Grocery Mart • Contact Us </title>
 	<!-- Custom Theme files -->
 	<link href="css/style.css" rel="stylesheet" type="text/css" media="all"/>
 	<!-- //Custom Theme files -->
