--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -13,16 +13,24 @@
 
                     <div class="col-md-3 w3_footer_grid">
                         <h3>Contact</h3>
+
                         <ul class="address">
-                            <li><i class="fas fa-map-marker-alt"></i>London, 235 Terry, 10001</li>
-                            <li><i class="fas fa-envelope-open-text"></i><a
-                                    href="mailto:info@example.com">info@example.com</a></li>
-                            <li> <a href="tel:+44-000-888-999"><i class="fas fa-phone-alt"></i>++44-000-888-999</a></li>
+                            <li>
+                                <i class="fas fa-map-marker-alt"></i>London, 235 Terry, 10001
+                            </li>
+                            <li>
+                                <i class="fas fa-envelope-open-text"></i>
+                                <a href="mailto:info@example.com">info@example.com</a>
+                            </li>
+                            <li>
+                                <a href="tel:+44-000-888-999"><i class="fas fa-phone-alt"></i>++44-000-888-999</a>
+                            </li>
                         </ul>
                     </div>
 
                     <div class="col-md-3 w3_footer_grid">
                         <h3>Information</h3>
+
                         <ul class="info">
                             <li>
                                 <a th:href="@{/about}"><i class="fas fa-angle-right"></i>About Us</a>
@@ -32,30 +40,47 @@
                                 <a th:href="@{/contact}"><i class="fas fa-angle-right"></i>Contact Us</a>
                             </li>
 
-                            <li><a href="codes.html"><i class="fas fa-angle-right"></i>Shortcodes</a></li>
-
-                            <li><a href="faq.html"><i class="fas fa-angle-right"></i>FAQ's</a></li>
-                            <li><a href="products1.html"><i class="fas fa-angle-right"></i>Special Products</a></li>
+                            <li>
+                                <a href="products1.html"><i class="fas fa-angle-right"></i>Special Products</a>
+                            </li>
                         </ul>
                     </div>
 
                     <div class="col-md-3 w3_footer_grid">
                         <h3>Category</h3>
+
                         <ul class="info">
-                            <li><a href="products1.html"><i class="fas fa-angle-right"></i>Fruits & Vegetables</a></li>
-                            <li><a href="products2.html"><i class="fas fa-angle-right"></i>Meats & Seafood</a></li>
-                            <li><a href="products1.html"><i class="fas fa-angle-right"></i>Bakery & Pastry</a></li>
-                            <li><a href="products2.html"><i class="fas fa-angle-right"></i>Beverages</a></li>
-                            <li><a href="products1.html"><i class="fas fa-angle-right"></i>Breakfast & Dairy</a></li>
+                            <li>
+                                <a href="products1.html"><i class="fas fa-angle-right"></i>Fruits & Vegetables</a>
+                            </li>
+                            <li>
+                                <a href="products2.html"><i class="fas fa-angle-right"></i>Meats & Seafood</a>
+                            </li>
+                            <li>
+                                <a href="products1.html"><i class="fas fa-angle-right"></i>Bakery & Pastry</a>
+                            </li>
+                            <li>
+                                <a href="products2.html"><i class="fas fa-angle-right"></i>Beverages</a>
+                            </li>
+                            <li>
+                                <a href="products1.html"><i class="fas fa-angle-right"></i>Breakfast & Dairy</a>
+                            </li>
                         </ul>
                     </div>
 
                     <div class="col-md-3 w3_footer_grid">
                         <h3>Profile</h3>
+
                         <ul class="info">
-                            <li><a th:href="@{/home}"><i class="fas fa-angle-right"></i>Home</a></li>
-                            <li><a href="products2.html"><i class="fas fa-angle-right"></i>Today's Deals</a></li>
+                            <li>
+                                <a th:href="@{/home}"><i class="fas fa-angle-right"></i>Home</a>
+                            </li>
+                            <li>
+                                <a href="products2.html"><i class="fas fa-angle-right"></i>Today's Deals</a>
+                            </li>
                         </ul>
+
+
                         <h4>Follow Us</h4>
 
                         <div class="agileits_social_button">
@@ -67,13 +92,13 @@
                             </ul>
                         </div>
                     </div>
+
                 </div>
             </div>
 
             <div class="footer-copy mt-4">
                 <div class="container">
-                    <p class="copy-text">&copy; 2021 Grocery Mart. All rights reserved.
-                    </p>
+                    <p class="copy-text">&copy; 2021 Grocery Mart. All rights reserved.</p>
                 </div>
             </div>
 
