--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,7 +8,7 @@
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Grocery Mart - Ecommerce Category Bootstrap Responsive Website Template - Home </title>
+	<title>N&S Grocery • Home Page - Online Grocery Shopping</title>
 	<!-- Custom Theme files -->
 	<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 	<!-- //Custom Theme files -->
