h2 in memory database installed + connected

--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -104,17 +104,17 @@
 					<form method="post" class="signin-form" th:action="@{/sendMsg}" th:object="${contact}">
 
 						<div class="input-grids">
-							<input type="text" placeholder="Your Name*" class="contact-input" th:field="*{name}"/>
+							<input type="text" placeholder="Your Name" class="contact-input" th:field="*{name}"/>
 
-							<input type="email" placeholder="Your Email*" class="contact-input" th:field="*{email}"/>
+							<input type="email" placeholder="Your Email" class="contact-input" th:field="*{email}"/>
 
-							<input type="text" placeholder="Phone Number*" class="contact-input" th:field="*{mobileNum}"/>
+							<input type="text" placeholder="Phone Number" class="contact-input" th:field="*{mobileNum}"/>
 
-							<input type="text" placeholder="Subject*" class="contact-input" th:field="*{subject}"/>
+							<input type="text" placeholder="Subject" class="contact-input" th:field="*{subject}"/>
 						</div>
 
 						<div class="form-input">
-								<textarea placeholder="Type your message here*" th:field="*{message}"></textarea>
+								<textarea placeholder="Type your message here" th:field="*{message}"></textarea>
 						</div>
 
 						<button class="btn btn-style">Send Message</button>
