--- a/src/main/resources/templates/inquiries.html
+++ b/src/main/resources/templates/inquiries.html
@@ -4,13 +4,13 @@
 
 
 <head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Grocery Mart • User Dashboard</title>
-  <!-- Custom Theme files -->
-  <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
-  <!-- //Custom Theme files -->
+<!-- Required meta tags -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Grocery Mart • Inquiries</title>
+<!-- Custom Theme files -->
+<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<!-- //Custom Theme files -->
 </head>
 
 <body>
@@ -23,13 +23,13 @@
 <!-- banner -->
 <div class="banner banner2">
     <div class="container">
-        <h2>Dashboard</h2>
+        <h2>Inquiries</h2>
     </div>
 </div>
 <!-- //banner -->
 
 
-<!-- breadcrumbs -->
+<!-- breadcrumbs - Path -->
 <div class="breadcrumb_dress">
     <div class="container">
         <ul>
@@ -38,48 +38,63 @@
                 <i>/</i>
             </li>
 
-            <li>Dashboard</li>
+            <li>
+                <a th:href="@{/dash}"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Dashboard</a>
+                <i>/</i>
+            </li>
+
+            <li> Inquiries</li>
         </ul>
     </div>
 </div>
-<!-- //breadcrumbs -->
+<!-- //breadcrumbs - Path -->
 
-<!-- Dashboard buttons -->
+<div class="site-section">
 
-<div class="container py-md-5 py-4">
-    <div class="section__content section__content--p30">
-        <div class="container-fluid">
-            <div class="row m-t-25">
-                <!-- This <div> will be visible to admin role characters ONLY -->
-                <div class="col-sm-6 col-lg-3" sec:authorize="hasRole('ROLE_ADMIN')">
-                    <a th:href="@{/displayInquiries}" class="btn btn-primary" style="background-color: #b64215; width: 33%;" role="button">
-                        <i class="fa fa-envelope"></i>
-                    </a>
-                </div>
+    <div class="table-responsive-md">
+        <div class="row mb-4">
+            <div class="col-md-7">
+                <h3 class="heading-21921" style="margin-left: 12%; margin-top: 7%;">Open Inquiries</h3>
             </div>
         </div>
+
+        <table class="table table-striped table-hover table-borderless align-middle" style="width: 85%; margin-left:7%;">
+
+            <thead class="table-dark">
+            <tr>
+                <th scope="col">Name</th>
+                <th scope="col">Mobile Num</th>
+                <th scope="col">Email</th>
+                <th scope="col">Subject</th>
+                <th scope="col">Message</th>
+                <th scope="col"></th>
+            </tr>
+            </thead>
+
+            <tbody>
+            <!-- th:if="contact : ${ContactList}" -->
+            <tr th:each="inquiry: ${inquiriesList}">
+                <td th:text="${inquiry.name}"></td>
+                <td th:text="${inquiry.mobileNum}"></td>
+                <td th:text="${inquiry.email}"></td>
+                <td th:text="${inquiry.subject}"></td>
+                <td th:text="${inquiry.message}"></td>
+                                                <!-- Query Params -->
+                <td>
+                    <a th:href="@{/closeInquiry(id=${inquiry.inquiryId})}" class="btn btn-style btn-style-3">CLOSE</a>
+                </td>
+            </tr>
+            </tbody>
+
+        </table>
+
+    </div>
+    <div class="col-md-2 login-center text-start">
+        <a th:href="@{/dash}">
+        <button class="btn btn-style btn-style-3 text-left" style="margin-left: 37%; margin-top: 13%; margin-bottom: 10%;">BACK</button>
+        </a>
     </div>
 </div>
-
-<!-- //Dashboard buttons -->
-
-
-<!-- Welcome block -->
-<section class="w3l-contact py-1" id="contact">
-  <div class="container py-md-1 py-1">
-
-    <div class="card border-warning mb-3" style="max-width: 30rem; margin-left: 30%; margin-top: 3%;">
-      <div class="card-header">Welcome</div>
-      <div class="card-body text-warning">
-        <h5 class="title-style" th:text="${username}"></h5>
-        <p class="" th:text="${'You logged in as - ' + roles}"></p>
-      </div>
-    </div>
-
-  </div>
-</section>
-<!-- //Welcome block -->
-
 
 <!-- footer -->
 <div th:replace="footer :: footer"></div>
